Replace inline SVG with an import. Add a webpack loader to handle SVGs, so they can be imported as react components. Add some styling to ensure icon isn't too large

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -22,6 +22,11 @@
 	}
 }
 
+.distributor-panel .components-panel__body-title svg {
+	height: 20px;
+	width: 20px;
+}
+
 .distributor-toggle {
 	margin-bottom: 8px;
 }
